// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentSidebar/ActivityFeed/comment/CommentText should properly format tagged comment 1`] = `
<div
  className="bcs-comment-text"
>
  How u doing 
  <UserLink
    className="bcs-comment-mention"
    id="2030326577"
    key="1-123"
  >
    @Young Jeezy
  </UserLink>
  ?
</div>
`;

exports[`components/ContentSidebar/ActivityFeed/comment/CommentText should properly handle unicode variants of @ in tagged comments 1`] = `
<div
  className="bcs-comment-text"
>
  Hi 
  <UserLink
    className="bcs-comment-mention"
    id="123"
    key="1-123"
  >
    ﹫Half
  </UserLink>
   
  <UserLink
    className="bcs-comment-mention"
    id="222"
    key="3-123"
  >
    ＠Full
  </UserLink>
   
  <UserLink
    className="bcs-comment-mention"
    id="432"
    key="5-123"
  >
    @Latin
  </UserLink>
</div>
`;
